--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-"Hello World" 
-Bruh wtf is going on in this class. He's mastered talking out of his ass.
+<html>
+  <head>
+    
+  </head>
+  <body>
+    <img src="ProfPic.jpg" alt="Nice Pic Andy">
+  </body>
+  
+</html>
